<resources>
    <string name="app_name">ResepmauMVP</string>
    <string name="action_settings">Settings</string>
    <string name="login">Login</string>
    <string name="login_desc">Masuk dengan menggunakan email dan password anda. Jika anda belum memiliki akun, anda bisa mendaftar.</string>
    <string name="hint_email">Enter your email</string>
    <string name="hint_pass">Carefully type your password</string>
    <string name="register">Register</string>
    <string name="register_desc">Please fill all forms below and password must be eight characters or more</string>
    <string name="hint_name">Full name</string>
    <string name="title_activity_recipe">RecipeActivity</string>
    <string name="hint_title">What\'s food</string>
    <string name="hint_content">Description</string>
    <string name="action_delete">Delete</string>
    <string name="action_logout">Logout</string>
</resources>
