<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".RegisterActivity">

    <LinearLayout
            android:layout_margin="16dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:layout_marginTop="16dp"
                android:text="Back"
                android:id="@+id/btn_back"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                app:icon="@drawable/ic_arrow_back_white_24dp"
                android:layout_height="wrap_content"/>

        <TextView
                android:layout_marginTop="36dp"
                android:textSize="28sp"
                android:textColor="@color/colorWhite"
                android:text="@string/register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        <TextView
                android:text="@string/register_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        <ProgressBar
                android:indeterminate="false"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:id="@+id/loading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        <com.google.android.material.textfield.TextInputLayout
                android:hint="@string/hint_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:id="@+id/et_name"
                    android:maxLines="1"
                    android:inputType="textPersonName"
                    android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:hint="@string/hint_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:id="@+id/et_email"
                    android:maxLines="1"
                    android:inputType="textEmailAddress"
                    android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:hint="@string/hint_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:id="@+id/et_password"
                    android:maxLines="1"
                    android:inputType="textPassword"
                    android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:text="Register"
                android:id="@+id/btn_register"
                android:textAllCaps="false"
                android:layout_height="wrap_content"/>
    </LinearLayout>

</ScrollView>